fix: structure layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>To do list server</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- link bootstrap -->
@@ -33,6 +33,42 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
+    <div id="app">
+      <div class="myContainer">
+        <div class="container">
+          <div class="row">
+            <h1 class="text-center">Todo List</h1>
+            <div class="row">
+              <div class="col p-3 sfondo">
+                <ul>
+                  <li class="d-flex justify-content-between">
+                    <span>cosa da fare</span>
+                    <div class="contButton">
+                      <i class="fa-solid fa-trash-can"></i>
+                      <i class="fa-solid fa-eye"></i>
+                    </div>
+                  </li>
+                  <li class="d-flex justify-content-between">
+                    <span>cosa da fare</span>
+                    <div class="contButton">
+                      <i class="fa-solid fa-trash-can"></i>
+                      <i class="fa-solid fa-eye"></i>
+                    </div>
+                  </li>
+                </ul>
+                <div class="d-flex ms-2 me-2">
+                  <input type="text" />
+                  <textarea name="" id=""></textarea>
+
+                  <button class="btn btn-outline-secondary ms-1">Button</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="js/myjs.js"></script>
   </body>
 </html>
