--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <div class="col p-3 sfondo">
                 <ul>
                   <li class="d-flex justify-content-between">
-                    <span>cosa da fare</span>
+                    <span>{{title}}</span>
                     <div class="contButton">
                       <i class="fa-solid fa-trash-can"></i>
                       <i class="fa-solid fa-eye"></i>
