--- a/index.html
+++ b/index.html
@@ -41,15 +41,11 @@
             <div class="row">
               <div class="col p-3 sfondo">
                 <ul>
-                  <li class="d-flex justify-content-between">
-                    <span>{{title}}</span>
-                    <div class="contButton">
-                      <i class="fa-solid fa-trash-can"></i>
-                      <i class="fa-solid fa-eye"></i>
-                    </div>
-                  </li>
-                  <li class="d-flex justify-content-between">
-                    <span>cosa da fare</span>
+                  <li
+                    v-for="element in toDoData"
+                    class="d-flex justify-content-between"
+                  >
+                    <span>{{element.title}}</span>
                     <div class="contButton">
                       <i class="fa-solid fa-trash-can"></i>
                       <i class="fa-solid fa-eye"></i>
@@ -57,10 +53,20 @@
                   </li>
                 </ul>
                 <div class="d-flex ms-2 me-2">
-                  <input type="text" />
-                  <textarea name="" id=""></textarea>
+                  <input @keyup.enter="addTask()" v-model="text" type="text" />
+                  <textarea
+                    @keyup.enter="addTask()"
+                    v-model="description"
+                    name=""
+                    id=""
+                  ></textarea>
 
-                  <button class="btn btn-outline-secondary ms-1">Button</button>
+                  <button
+                    @click="addTask()"
+                    class="btn btn-outline-secondary ms-1"
+                  >
+                    Button
+                  </button>
                 </div>
               </div>
             </div>
