--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     v-for="(element, index) in toDoData"
                     class="d-flex justify-content-between"
                   >
-                    <span>{{element.title}}</span>
+                    <span :class="{ done: true}">{{element.title}}</span>
                     <div class="contButton">
                       <i
                         @click="eliminateTask(index)"
